syntax = "proto3";

package temporal.server.api.enums.v1;

option go_package = "go.temporal.io/server/api/enums/v1;enums";

enum ClusterMemberRole {
    CLUSTER_MEMBER_ROLE_UNSPECIFIED = 0;
    CLUSTER_MEMBER_ROLE_FRONTEND = 1;
    CLUSTER_MEMBER_ROLE_HISTORY = 2;
    CLUSTER_MEMBER_ROLE_MATCHING = 3;
    CLUSTER_MEMBER_ROLE_WORKER = 4;
}

enum HealthState {
    HEALTH_STATE_UNSPECIFIED = 0;
    HEALTH_STATE_SERVING = 1;
    HEALTH_STATE_NOT_SERVING = 2;
    HEALTH_STATE_DECLINED_SERVING = 3;
}
